add echarts visualize

--- a/weekly-report/module.conf
+++ b/weekly-report/module.conf
@@ -1,5 +1,16 @@
 {
     "baseUrl": "src",
     "paths": {},
-    "packages": []
+    "packages": [
+        {
+            "name": "echarts",
+            "location": "dep/echarts/1.2.0/src",
+            "main": "echarts"
+        },
+        {
+            "name": "zrender",
+            "location": "dep/zrender/1.0.3/src",
+            "main": "zrender"
+        }
+    ]
 }
